--- a/Roleta_da_Adivinhação.html
+++ b/Roleta_da_Adivinhação.html
@@ -3,30 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>Roleta da Adivinhação</title>
-=======
     <title>Roleta Russa</title>
->>>>>>> 2e9943e4066deffffd03a2dd1c24697518f529f3
 </head>
 <body>
     <script>
 
-        let numeroAleatorio = Math.random()*10 +1;
-        let numeroAleatorioInteiro = Math.floor(numeroAleatorio);
+function pularLinha(){ 
+        document.write("<br>");
+       }
 
-        let resposta = prompt("Digite um número de 1 a 10: ");
+       document.write("Seja bem vindo a Roleta da Adivinhação!");
+       pularLinha();
+       pularLinha();
+       document.write("Nesse joguinho, eu vou pensar em um número e você ")
+       pularLinha();
+       document.write("tem que adivinhar o número que eu estou pensando.")
+       pularLinha();
+       pularLinha();
+       document.write("Caso você acerte o mesmo número que o meu, você terá uma");
+       pularLinha();
+       document.write(" surpresa inesquecível no final!")
+       pularLinha();
+       pularLinha();
+       document.write("Vamos começar? Pense em um número...");
+       pularLinha();
+       pularLinha();
 
-        let resultado = (resposta >=1 && resposta <=10) ?
-                            (resposta == numeroAleatorioInteiro) ?
-                            "Parabéns! Você adivinhou!":
-                        "Você errou! O número que eu pensei era " +
-                            numeroAleatorioInteiro + "!" :
-                        "Número inválido."
+        let numeroAleatorio = Math.random()*9 + 1;
+        let numeroAleatorioInteiro = Math.round(numeroAleatorio);
 
-
-        document.write(resultado);
-
+        document.write(numeroAleatorioInteiro);
     </script>
 
 </body>
